# griptape-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
griptape/tools/: __init__.py  base_aws_client.py  base_google_client.py
griptape/tools/aws_cli/: manifest.yml  requirements.txt  tool.py
griptape/tools/aws_iam_client/: tool.py
griptape/tools/aws_pricing_client/: manifest.yml  tool.py
griptape/tools/aws_s3/: requirements.txt  tool.py
griptape/tools/aws_s3_client/: tool.py
griptape/tools/calculator/: requirements.txt  tool.py
griptape/tools/computer/: Dockerfile  requirements.txt  tool.py
griptape/tools/date_time/: tool.py
griptape/tools/email_client/: requirements.txt  tool.py
griptape/tools/file_manager/: requirements.txt  tool.py
griptape/tools/google_cal/: tool.py
griptape/tools/google_gmail/: tool.py
griptape/tools/google_search/: tool.py
griptape/tools/knowledge_base_client/: tool.py
griptape/tools/memory_extractor/: tool.py
griptape/tools/memory_processor/: tool.py
griptape/tools/openweather_client/: tool.py
griptape_tools/: __init__.py
griptape_tools/calculator/: requirements.txt  tool.py
griptape_tools/google_search/: tool.py
tests/: utils.py
tests/unit/: test_aws_cli.py  test_aws_iam.py  test_aws_s3.py  test_calculator.py  test_computer.py  test_date_time.py  test_email_client.py  test_file_manager.py  test_google_cal.py  test_google_search.py  test_knowledge_base_client.py  test_memory_extractor.py  test_memory_processor.py  test_openweather_client.py  test_pdf_reader.py  test_rest_api.py  test_rest_api_client.py  test_sql_client.py  test_text_memory_browser.py  test_text_memory_extractor.py  test_text_processor.py  test_tool_output_processor.py  test_vector_client.py  test_vector_store_client.py  test_web_scraper.py  test_web_search.py
(+24 files in other folders)
