[tool.poetry]
name = "griptape-tools"
version = "0.14.0"
description = "Tools for the Griptape framework."
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/griptape-ai/griptape-tools"

packages = [
    {include = "griptape"}
]

[tool.poetry.dependencies]
python = "^3.9"

griptape = ">= 0.12.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
