[tool.poetry]
name = "griptape-tools"
version = "0.16.3"
description = "Tools for the Griptape framework."
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/griptape-ai/griptape-tools"

packages = [
    {include = "griptape"}
]

[tool.poetry.dependencies]
python = "^3.9"

griptape = ">= 0.14.6"
docker = "^6.1.3"
stringcase = "^1.2.0"
boto3 = "^1.28.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
